fix(epay): filter overflow hidden

--- a/src/main/webapp/epayclient/src/styles.css
+++ b/src/main/webapp/epayclient/src/styles.css
@@ -306,6 +306,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .filter{
   margin-bottom: 20px;
   font-size: 20px;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
